CHANGES IN VERSION 1.13
-----------------------

USER VISIBLE CHANGES

    o Added support to read gzipped XYS files directly.

BUG FIXES

    o Fixed bug in boxplot / hist / MAplot

    o Fixed issue that would appear with GeneFeatureSet objects,
    in which it selections like obj[c(2, 2, 1),] would generate
    invalid GeneFeatureSet objects

    o Fixed bugs in image / bg / bgindex / bgSequence
    for Exon and Gene arrays (due to changes in annotation)


CHANGES IN VERSION 1.11
-----------------------

USER VISIBLE CHANGES

    o New vignette structure:
    Vignette 1: Overview (with multiple examples)
    Vignette 2: Expression (NimbleGen data)
    Vignette 3: SNP Genotyping (Affymetrix)

    o Uses Imports rather than Depends. Users must
    explicitly load Biobase, affyio, preprocessCore
    if they need functions from these packages.

    o Revised man page for rma.

NEW FEATURES

    o Support to large datasets via ff package.
    The user should load the ff package in order to use
    this feature. Files used by ff are saved to getwd(),
    unless the user changes the standard path.

    o Support to parallel computing via snow package.
    The user should load *both* ff and snow in order to use
    the parallel features implemented in the package
    (backgroundCorrect, normalize, summarize, rma,
    normalizeToTarget). Cluster variable should be set as
    options(cluster=makeCluster(...)).

    o seqColors and darkColors, respectively, generate a
    vector of sequential colors (in blue) and (qualitative)
    dark colors (based onn Dark2 from RColorBrewer).

    o plotM method for SnpSuperSet (plot genotype clusters).

    o getAffinitySplineCoefficients estimates the affinity
    spline coefficients.

    o getBaseProfile estimates and optionally plots sequence
    effect like gcrma.

BUG FIXES

    o Fixed definition for probeNames() for Exon/Gene arrays.
    (Mikhail Pachkov)